Fixes modal scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -903,11 +903,11 @@ body {
 .modal {
   position: fixed;
   left: 0;
+  right: 0;
   top: 0;
 
   display: flex;
   height: 100%;
-  width: 100%;
   padding: var(--card-set-gap);
 
   overflow-x: hidden;
